# explorer_stack

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  colcon_defaults.yaml  explorer_reorganization_proposal.txt  ruff.toml
actuator_standalone/: CMakeLists.txt  package.xml
actuator_standalone/bringup/config/: actuator_controller.yaml  actuator_vesc.yaml
actuator_standalone/bringup/launch/: real_actuator.launch.py  real_actuator_effort.launch.py  real_actuator_pos.py  real_actuator_velocity.launch.py  simu_actuator.launch.py
actuator_standalone/description/gazebo/: actuator.gazebo.xacro
actuator_standalone/description/ros2_control/: actuator.ros2_control.xacro
actuator_standalone/description/rviz/: view_actuator.rviz
actuator_standalone/description/urdf/: actuator.urdf.xacro  actuator_description.urdf.xacro
actuator_standalone/src/: joint_controller.cpp
explorer/: CMakeLists.txt  README.md  package.xml  ros2_control_explorer.xml
explorer/bringup/config/: explorer_controller.yaml  explorer_publisher.yaml  explorer_vesc _hw.yaml  explorer_vesc.yaml  explorer_vesc_hw.yaml  plotjuggler_qp.xml  plotjuggler_real.xml  plotjuggler_simu.xml  settings.yaml  settings_POC1.yaml  settings_POC2.yaml  settings_joint.yaml  settings_joint_POC2.yaml  settings_pos_only.yaml  settings_qp.yaml  spacenav_settings.yaml
explorer/bringup/launch/: cartesian_control.launch.py  complete_system.launch.py  control_test.launch.py  explorer.launch.py  explorer_bridge.launch.py  explorer_cartesian.launch.py  explorer_controller.launch.py  explorer_gazebo_classic.launch.py  explorer_joint.launch.py  explorer_publish.launch.py  explorer_real.launch.py  explorer_spacenav.launch.py  explorer_spacenav_ik.launch.py  explorer_spacenav_qp.launch.py  explorer_spacenav_qp_ign.launch.py  explorer_spacenav_qp_pos_only.launch.py  explorer_test.launch.py  input_integrator.launch.py  joint_control.launch.py  output_integrator.launch.py  qp_solving.launch.py  send_trajectory.launch.py
explorer/description/: README.md
explorer/description/gazebo/: explorer.gazebo.xacro  explorer_ign.gazebo.xacro
explorer/description/launch/: view_explorer.launch.py
explorer/description/ros2_control/: explorer.ros2_control.xacro  explorer_actuators.ros2_control.xacro  explorer_ign.ros2_control.xacro
explorer/description/urdf/: explorer.srdf  explorer.urdf.xacro  explorer_POC1_description.urdf.xacro  explorer_POC2_description.urdf.xacro  explorer_ign.urdf.xacro  explorer_joints.xacro  explorer_new_description.urdf.xacro  explorer_old_description.urdf.xacro  explorer_test.urdf.xacro
explorer/description/worlds/: empty_world.world  simu.world
explorer/explorer_bringup/config/: settings_POC2.yaml  settings_joint_POC2.yaml
explorer/explorer_bringup/launch/: cartesian_control.launch.py  explorer_cartesian.launch.py  explorer_joint.launch.py  joint_control.launch.py
explorer/explorer_description/: README.md
explorer/explorer_description/gazebo/: explorer.gazebo.xacro
explorer/explorer_description/launch/: view_explorer.launch.py
explorer/explorer_description/rviz/: view_robot.rviz
explorer/src/: CMakeLists.txt  README.md
explorer_bringup/: CMakeLists.txt  package.xml
explorer_bringup/config/: bridge.yaml  explorer_controller.yaml  explorer_custom_controller.yaml  explorer_multi_intf_controller.yaml  joy_settings.yaml  settings_POC1.yaml  settings_POC2.yaml
explorer_bringup/launch/: cartesian_control.launch.py  custom_controller_joint_control.launch.py  custom_controller_mode_0.py  explorer_cartesian.launch.py  explorer_joint.launch.py  hardware_base.launch.py  hardware_multi_intf_base.launch.py  joint_control.launch.py  mode_0.launch.py  multi_intf_joint_control.launch.py  simulation_base.launch.py
explorer_command_controllers/: CMakeLists.txt  explorer_command_plugin.xml  package.xml
explorer_command_controllers/src/: explorer_custom_controller.cpp  explorer_custom_controller_parameters.yaml  explorer_multi_intf_controller.cpp  explorer_multi_intf_controller_parameters.yaml
explorer_controllers/: CMakeLists.txt  package.xml
explorer_controllers/msg/: ControlFrameSelection.msg
explorer_description/: CMakeLists.txt  package.xml
explorer_description/gazebo/: explorer.gazebo.xacro
explorer_description/launch/: view_explorer.launch.py
explorer_description/ros2_control/: explorer.ros2_control.xacro  explorer_actuators.ros2_control.xacro  explorer_simulation.ros2_control.xacro
explorer_description/urdf/: explorer.urdf.xacro  explorer_POC1_description.urdf.xacro  explorer_POC2_description.urdf.xacro  explorer_joints.xacro
explorer_hardware/: CMakeLists.txt  explorer_hardware.xml  package.xml
explorer_hardware/src/: explorer_hardware.cpp
explorer_input_devices/: CMakeLists.txt  package.xml
explorer_input_devices/config/: movis_joystick_settings.yaml  xbox_gamepad_settings.yaml
explorer_input_devices/src/: device.cpp  device_spacenav.cpp  xbox_gamepad_joint.cpp
explorer_user_interfaces_cpp/: CMakeLists.txt  README.md  package.xml
explorer_user_interfaces_cpp/src/: button_handler.cpp  command_node.cpp  controller_switcher.cpp  trajectory_manager.cpp
explorer_user_interfaces_web/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
explorer_user_interfaces_web/explorer_user_interfaces_web/: __init__.py  web_gui_node.py  web_server.py
explorer_user_interfaces_web/launch/: explorer_with_web_gui.launch.py  web_gui.launch.py
explorer_user_interfaces_web/resource/: explorer_user_interfaces_web
explorer_user_interfaces_web/scripts/: install_dependencies.sh
libs/qpoases_ros2/: CMakeLists.txt  package.xml
orthopus_ros_interface/: CMakeLists.txt  orthopus_ros_interface.xml  package.xml
orthopus_ros_interface/src/: hw_interface.cpp
orthopus_vesc_interface/: CMakeLists.txt  orthopus_vesc_interface.xml  package.xml
orthopus_vesc_interface/src/: orthopus_vesc_interface.cpp
pyvesc_explorer/: package.xml  setup.cfg  setup.py
pyvesc_explorer/pyvesc_explorer/: app_sim.py  ros_actuator_bridge.py  ros_explorer_bridge.py
(+232 files in other folders)
