<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>explorer_user_interfaces_web</name>
  <version>0.0.0</version>
  <description>Web-based GUI for Explorer robot control interfaces</description>

  <maintainer email="thomas.solatges@orthopus.com"></maintainer>

  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>explorer_msgs</depend>

  <!-- Available through rosdep/apt -->
  <exec_depend>python3-websockets</exec_depend>
  <exec_depend>python3-jinja2</exec_depend>  
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-pip</exec_depend>
  <exec_depend>python3-pynput</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
