<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pyvesc_explorer</name>
  <version>0.0.0</version>
  <description>pyVESC integration for Orthopus Explorer arm</description>
  <maintainer email="bmi.dev@redox.ws">BMi</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>pyvesc</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-click</exec_depend>
  <exec_depend>ipython3</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>python3-nest-asyncio</exec_depend>
  <exec_depend>pyvesc_explorer_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
